- revert page title

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Fetch Villa a Real Estate Responsive</title>
+    <title>React Redux App</title>
     
     <!--/web-fonts-->
     <link href='//fonts.googleapis.com/css?family=Tangerine:400,700' rel='stylesheet' type='text/css'>
